kubernetes/apps/llm/_base/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: llamacpp
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: llamacpp
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: http
